ajuste organizacao das pastas

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d762618-ea0d-41ba-bfca-97b53f13e994",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f168b3-45eb-4005-8f65-50ff7c7e48d1",
    "metadata": {},
    "outputs": [],
    "source": []
