adição de alguns TODOs

--- a/scripts/resposta-desafio.ipynb
+++ b/scripts/resposta-desafio.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "026de3c9-7ae6-4e99-baab-5284fa9b8899",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,10 @@
     }
    ],
    "source": [
-    "print(r.json())"
+    "print(r.json())\n",
+    "#ver uma lib que salve no formato parquet\n",
+    "# converter dados\n",
+    "# salvar dados"
    ]
   },
   {
@@ -238,6 +241,17 @@
    "source": [
     "## 3. Persistência em PostgreSQL\n",
     "Criar tabela weather_data com estrutura correspondente aos campos extraídos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfa2049f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#conectar com banco; ver melhor lib para isso\n",
+    "#criar parser json -> sql"
    ]
   },
   {
@@ -251,6 +265,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37414367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#perdir credenciais\n",
+    "# ver lib mongo; conectar bongo\n",
+    "# acessar collection"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c6d7ad65-b870-4b9d-b42b-71a1cabf4bf8",
    "metadata": {},
@@ -258,6 +284,18 @@
     "## 5. Exportação MongoDB para Parquet datalake(Minio)\n",
     "Salvar dados da collection reviews em:\n",
     "minio://bucket-name/raw/mongodb/reviews.parquet\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11483a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#usar mesma lib anteriormente para savar os dados da lib como parquet\n",
+    "# dessa vez salva no minio\n",
+    "# estudar o minio"
    ]
   },
   {
@@ -269,6 +307,16 @@
     "Processar coluna \"Review\" dos dados do MongoDB\n",
     "Utilizar algoritmo Python para contagem de palavras\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c00785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gerar nuvens de palavras; parser?"
    ]
   },
   {
