observações de libs

--- a/scripts/resposta-desafio.ipynb
+++ b/scripts/resposta-desafio.ipynb
@@ -199,7 +199,8 @@
     "    #adicionar dados da cidade em lista\n",
     "    CITIES_DATA.append(city_weather_info)\n",
     "\n",
-    "#print(CITIES_DATA)"
+    "#print(CITIES_DATA)\n",
+    "# talvez usar o seaborn para visualização dos dados"
    ]
   },
   {
@@ -228,8 +229,9 @@
     }
    ],
    "source": [
-    "print(r.json())\n",
+    "#print(r.json())\n",
     "#ver uma lib que salve no formato parquet\n",
+    "# dá para usar pandas ou pyarrow\n",
     "# converter dados\n",
     "# salvar dados"
    ]
@@ -295,7 +297,8 @@
    "source": [
     "#usar mesma lib anteriormente para savar os dados da lib como parquet\n",
     "# dessa vez salva no minio\n",
-    "# estudar o minio"
+    "# estudar o minio\n",
+    "# https://pypi.org/project/minio/"
    ]
   },
   {
